# template-cplus

./: .clang-format  .clang-tidy  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
.agents/skills/: architecture.md  code-quality.md  security-performance.md  testing.md  version-control.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.weblapp/: template.json
src/: CMakeLists.txt  config.h  main.cc  router.cc  router.h
src/handlers/: health_handler.h  hello_handler.h
src/services/: greeting_service.cc  greeting_service.h
tests/: CMakeLists.txt  greeting_service_test.cc  router_test.cc
